FIND_PACKAGE(SWIG REQUIRED)

INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(
	"${PROJECT_BINARY_DIR}/../../"
	"${PROJECT_SOURCE_DIR}/include"
	"${PROJECT_SOURCE_DIR}/../ods/include"
)

# SET(CMAKE_SWIG_FLAGS "-I/usr/include")

# SET_SOURCE_FILES_PROPERTIES(sos.i PROPERTIES CPLUSPLUS ON)
# SET_SOURCE_FILES_PROPERTIES(sos.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(sos python sos.i)
SWIG_LINK_LIBRARIES(sos sos ${PYTHON_LIBRARIES})
